added null check in getHearingTypeFromAdditionalDetails